######################################################################
Revision history for Perl extension File::Comments

0.04  02/15/2005
      (ms) PPI is leaking memory, added optional # and POD comment parser
           when env var FILE_COMMENTS_PERL_NO_PPI is set.

0.03  02/08/2005
      (ms) Moved extracting functions from Plugin.pm into plugins
      (ms) Added Shell plugin
      (ms) added .H to C plugin
      (ms) perl plugin now takes __END__ literally. 
      (ms) Fallback if perl parsing fails: return entire script text
           as comment.

0.02  02/07/2005
      (ms) Added PPI parser to Perl plugin, enabling inline comments.
      (ms) Added HTML::TokeParser to HTML plugin.

0.01  02/06/2005
      (ms) Where it all began.