@@ -9,8 +9,9 @@ requires:
     HTML::TokeParser:              2.28
     Log::Log4perl:                 0.5
     Module::Pluggable:             2.4
+    Pod::Parser:                   1.14
     PPI:                           0.902
     Sysadm::Install:               0.11
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.21
